Implemented backend (endpoints, controllers) and frontend (actions, reducers, view) for creating context, topic, tag
