# api/controllers/contexts.js
@@ -18,3 +18,19 @@ exports.getContexts = function (req, res, next) {
         res.json(result);
     });
 };
+
+exports.createContext = function (req, res, next) {
+    var contextData = req.swagger.params.contextData.value;
+
+    var query = "INSERT INTO contexts(name) " +
+        "VALUES(${name}) ";
+
+    var result = {};
+    return Q.fcall(function () {
+        return db.any(query, contextData);
+    }).then(function() {
+        res.json(result);
+    }).catch(function (err) {
+        console.error('Error adding context', err);
+    });
+};
